<resources>
    <!--General-->
    <string name="app_name">Algebra Quiz App</string>
    <string name="answer_goes_here">Answer Goes Here</string>
    <string name="next">Next</string>
    <string name="instructions">Instructions</string>
    <string name="target_text">Target Text</string>
    <string name="finkel">Finkel</string>
    <string name="jacob">Jacob</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="quizzes_completed">Quizzes Completed</string>
    <string name="points">Points</string>
    <string name="time">Time</string>
    <string name="night_mode_on">Night Mode On</string>
    <string name="night_mode_off">Night Mode Off</string>
    <string name="apply">Apply</string>
    <string name="quiz_selection">Quiz Selection</string>
    <string name="confirm">Confirm</string>
    <string name="drag_the_answer_here">Drag The Answer Here</string>
    <string name="functions_2_3">Functions_2_3</string>
    <string name="linearmodels">LinearModels</string>

</resources>
