<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:orientation="vertical"
    android:padding="7dp"
    tools:context=".ProgressActivity"
    tools:ignore="PrivateResource">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/BarChart"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="0dp"/>

    <!-- TextView Linear Layout Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:background="@color/black_Charcoal"
        android:elevation="4dp"
        android:orientation="horizontal">

        <!--Txt Quiz Completed-->
        <TextView
            android:id="@+id/txtView_QuizCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:text="@string/quizzes_completed"
            android:textAlignment="center"
            android:textColor="@color/Azure"
            android:textStyle="italic" />

        <!--Txt Total Points-->
        <TextView
            android:id="@+id/txtView_TotalPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="35dp"
            android:text="@string/points"
            android:textAlignment="center"
            android:textColor="@color/Azure"
            android:textStyle="italic" />

        <!--Txt Total Usage Time-->
        <TextView
            android:id="@+id/txtView_TotalUsageTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="65dp"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@color/Azure"
            android:textStyle="italic" />
    </LinearLayout>

</RelativeLayout>